--- a/call-dashboard/src/App.css
+++ b/call-dashboard/src/App.css
@@ -5,7 +5,7 @@ body {
   align-items: center;
   height: 100vh;
   overflow: hidden; /* Hide overflow to prevent scrollbars from appearing */
-  background: linear-gradient(45deg, #92a8d1, #034f84, #92a8d1, #034f84);
+  background: linear-gradient(45deg, #B2C8DF, #6E85B7, #B2C8DF, #6E85B7);
   background-size: 400% 400%;
   animation: gradientAnimation 15s ease infinite;
 }
@@ -43,14 +43,16 @@ h1 {
   width: 150px;
   height: 100px;
   
-  background: linear-gradient(135deg, rgba(52, 152, 219, 0.6) 0%, rgba(52, 152, 219, 0.3) 100%);
+  /*background: linear-gradient(135deg, rgba(52, 152, 219, 0.6) 0%, rgba(52, 152, 219, 0.3) 100%);*/
   color: #fff;
-  border-radius: 15px;
-  box-shadow: 0 8px 16px rgba(52, 152, 219, 0.2);
+  border-radius: 6px;
+  background-color: rgba(196, 215, 224, 0.2);
+  box-shadow: 0 8px 16px rgba(0, 0, 0, 0.2);
   display: flex;
   align-items: center;
   justify-content: center;
-  font-size: 1.2em;
+  font-size: 1.3em;
+  font-weight: 500;
   flex-direction: column;
   justify-content: space-around;
   padding: 10px;
@@ -66,4 +68,5 @@ h1 {
   color: #fff; /* Set Total Calls text color to white */
   font-size: 24px; /* Set font size to make it larger */
   margin-top: 20px; /* Adjust top margin as needed */
+  text-shadow: 1px 1px 2px rgba(0, 0, 0, 0.5);
 }
