--- a/call-dashboard/src/App.css
+++ b/call-dashboard/src/App.css
@@ -5,8 +5,8 @@ body {
   align-items: center;
   height: 100vh;
   overflow: hidden; /* Hide overflow to prevent scrollbars from appearing */
-  /*background: linear-gradient(45deg, #B2C8DF, #6E85B7, #B2C8DF, #6E85B7); */
-  background: linear-gradient(45deg, #e19c95, #FEBFD2, #e19c95, #FEBFD2);
+  background: linear-gradient(45deg, #B2C8DF, #6E85B7, #B2C8DF, #6E85B7);
+  /*background: linear-gradient(45deg, #e19c95, #FEBFD2, #e19c95, #FEBFD2); */
   
   background-size: 400% 400%;
   animation: gradientAnimation 15s ease infinite;
